--- a/Blog/css/dashboard.css
+++ b/Blog/css/dashboard.css
@@ -1,10 +1,23 @@
 /*  STYLING DEFAULTS */
-* { margin: 0px; padding: 0px; }
-a { text-decoration: none; }
-h1, h2, h3, h4, h5, h6 { font-family: 'Noto Serif', serif; }
+* { 
+        margin: 0px; 
+        padding: 0px; 
+}
+a { 
+        text-decoration: none; 
+}
+h1, h2, h3, h4, h5, h6 { 
+        font-family: 'Noto Serif', serif; 
+}
 /* forms */
-form { width: 60%; margin: 5px auto; padding-bottom: 50px; }
-form input[type=file], input[type=email], input[type=password], input[type=text], 
+form { width: 60%; 
+        margin: 5px auto; 
+        padding-bottom: 50px; 
+}
+form input[type=file], 
+input[type=email], 
+input[type=password], 
+input[type=text], 
 form select, form textarea {
         width: 100%;
         display: block;
@@ -16,14 +29,33 @@ form select, form textarea {
         background: transparent;
         border: 1px solid #3E606F;
 }
-input[type="checkbox"] { height: 20px; float: left; }
-form button { float: right; margin-left: 24%; }
-form input:focus { outline: none; }
-label { margin-top: 20px; float: left; }
+input[type="checkbox"] { 
+        height: 20px; 
+        float: left; 
+}
+form button { 
+        float: right; 
+        margin-left: 24%; 
+}
+form input:focus { 
+        outline: none; 
+}
+label { margin-top: 20px; 
+        float: left; 
+}
 /* tables */
-table { border-collapse: collapse; width: 70%; margin: 20px auto; }
-th, td { padding: 8px; text-align: left; border: 1px solid #ddd; }
-th { text-align: center;}
+table { border-collapse: collapse; 
+        width: 70%; 
+        margin: 20px auto; 
+}
+th, td { 
+        padding: 8px; 
+        text-align: left; 
+        border: 1px solid #ddd; 
+}
+th { 
+        text-align: center;
+}
 /* buttons */
 .btn {
         color: white;
@@ -43,11 +75,28 @@ th { text-align: center;}
         color: white;
         background: black;
 }
-.header .logo { width: 50%; float: left; }
-.header .logo h1 { color: white; }
-.header .user-info { width: 10%; margin-top: 10px; float: right;}
-.header .logout-btn { color: red; text-decoration: none; }
-.header:after{ content: ""; display: block; clear: both; }
+.header .logo { 
+        width: 50%; 
+        float: left; 
+}
+.header .logo h1 { 
+        color: white; 
+}
+.header .user-info { 
+        width: 10%; 
+        margin-top: 10px; 
+        float: right;
+}
+.header .logout-btn { 
+        color: red; 
+        text-decoration: none; 
+}
+.header:after{ 
+        content: ""; 
+        display: block; 
+        clear: both; 
+}
+
 /* DASHBOARD */
 .container {
         width: 95%;
@@ -55,8 +104,15 @@ th { text-align: center;}
         border: 1px solid #BFBCB3;
         padding: 10px 0px 50px;
 }
-.container:after { content: ""; display: block; clear: both; }
-.container.dashboard h1 { text-align: center; margin: 25px; }
+.container:after { 
+        content: ""; 
+        display: block; 
+        clear: both; 
+}
+.container.dashboard h1 { 
+        text-align: center; 
+        margin: 25px; 
+}
 .container.dashboard .stats a {
         display: inline-block;
         padding: 30px;
@@ -66,9 +122,16 @@ th { text-align: center;}
         border-radius: 3px;
         border: 1px solid #BFBCB3;
 }
-.container.dashboard .stats a.first { margin-left: 25px; }
-.container.dashboard .stats a:hover { cursor: pointer; background-color: #E1E1E1; }
-.container.dashboard .buttons { margin-left: 15px; }
+.container.dashboard .stats a.first { 
+        margin-left: 25px; 
+}
+.container.dashboard .stats a:hover { 
+        cursor: pointer; 
+        background-color: #E1E1E1; 
+}
+.container.dashboard .buttons { 
+        margin-left: 15px; 
+}
 .container.dashboard .buttons a {
         display: inline-block;
         margin: 10px;
@@ -80,7 +143,11 @@ th { text-align: center;}
         color: white;
 }
 /* PAGE CONTENT */
-.container.content .menu { width: 16%; float: left; padding: 40px 10px; }
+.container.content .menu { 
+        width: 16%; 
+        float: left; 
+        padding: 40px 10px; 
+}
 /* Menu card */
 .container.content .menu .card .card-header {
         padding: 10px;
@@ -88,7 +155,9 @@ th { text-align: center;}
         border-radius: 3px 3px 0px 0px;
         background: #3E606F;
 }
-.container.content .menu .card .card-header h2 { color: white; }
+.container.content .menu .card .card-header h2 { 
+        color: white; 
+}
 .container.content .menu .card .card-content a {
         display: block;
         box-sizing: border-box;
@@ -99,20 +168,46 @@ th { text-align: center;}
 .container.content .menu .card .card-content a:hover {
         padding-left: 20px; background: #F9F9F9; transition: 0.1s;
 }
-/* Actions div (at the middle) */
-.container.content .action { width: 35%; float: left; text-align: center; }
-.container.content .action form { width: 90%; }
-.container.content .action .page-title { margin: 25px; }
-.container.content .action.create-post-div { width: 80%; }
-/* Table div (Displaying records from DB) */
-.table-div { float: left; width: 47%; }
-.table-div .message { width: 90%; margin-top: 20px; }
-.table-div table { width: 90%; }
-.table-div a.fa { color: white; padding: 3px; }
-.table-div .edit { background: #004220; }
-.table-div .delete { background: #F70E1A; }
-.table-div .publish { background: red; }
-.table-div .unpublish { background: green; }
+
+
+.container.content .action { 
+        width: 35%; float: left; text-align: center; 
+}
+.container.content .action form { 
+        width: 90%; 
+}
+.container.content .action .page-title { 
+        margin: 25px; 
+}
+.container.content .action.create-post-div { 
+        width: 80%; 
+}
+
+
+.table-div { 
+        float: left; width: 47%; 
+}
+.table-div .message {
+        width: 90%; margin-top: 20px; 
+}
+.table-div table { 
+        width: 90%; 
+}
+.table-div a.fa { 
+        color: white; padding: 3px; 
+}
+.table-div .edit { 
+        background: #004220; 
+}
+.table-div .delete { 
+        background: #F70E1A; 
+}
+.table-div .publish { 
+        background: red; 
+}
+.table-div .unpublish { 
+        background: green; 
+}
 /* VALIDATION ERRORS */
 .message {
         width: 100%; 
@@ -124,5 +219,14 @@ th { text-align: center;}
         border-radius: 5px; 
         text-align: center;
 }
-.error {color: #a94442; background: #f2dede; border: 1px solid #a94442; margin-bottom: 20px; }
-.validation_errors p {text-align: left;margin-left: 10px;}
+.error {
+        color: #a94442; 
+        background: #f2dede; 
+        border: 1px solid #a94442; 
+        margin-bottom: 20px; 
+}
+
+.validation_errors p {
+        text-align: left;
+        margin-left: 10px;
+}
