--- a/Blog/css/mainpage.css
+++ b/Blog/css/mainpage.css
@@ -47,8 +47,12 @@ form input:focus {
         text-decoration: none;
 }
 .container {
-        width: 80%;
-        margin: 0px auto ;
+        width: 90%;
+        margin: 1px auto ;
+}
+.flex-nedir{
+        display: flex;
+        
 }
 /* NAVBAR */
 .navbar {
@@ -100,17 +104,19 @@ form input:focus {
   color: white;
   background-color: #73707D;
   text-align: center;
-  width: 80%;
+  width: 90%;
   margin: 20px auto 0px;
   padding: 20px 0px;
 }
 
+
+/* BANNER */
 .banner {
         margin: 5px auto;
-        min-height: 500px;
-        color: white;
+        min-height: 200px;
+        color: rgb(232, 31, 31);
         border-radius: 5px;
-        background-image: url('images/tia.jpg');
+        background-image: url('images/ibo.jpg');
         background-size: 100% 100%;
 }
 .banner .welcome_msg {
@@ -147,28 +153,51 @@ form input:focus {
 
 /* CONTENT */
 .content {
+        display: block;
+        
         margin: 5px auto;
         border-radius: 5px;
-        min-height: 400px;
+        width: 90%;
+        min-height: 1000px;
 }
 .content:after {
         content: "";
         display: block;
         clear: both;
 }
-.content .content-title {
+.title{
+        display: flex;
+        width: 100%;
+        margin-left: 3%;
+        
+        justify-content: start;
+}
+ .content-title {
+        margin-left: 25px;
         margin: 10px 0px;
         color: #374447;
         font-family: 'Averia Serif Libre', cursive;
 }
+.main {
+        display: flex;
+}
 .content .post {
-        width: 335px;
+        width: 300px;
         margin: 9px;
-        min-height: 320px;
+        min-height: 90px;
         float: left;
         border-radius: 2px;
         border: 1px solid #b3b3b3;
         position: relative;
+}
+.content .pagination {
+        display: flex;
+        width: 100%;
+        margin-left: 40%;
+        
+        justify-content: start;
+
+
 }
 .content .post .category {
         margin-top: 0px;
@@ -190,29 +219,29 @@ form input:focus {
         transition: .4s;
         opacity: 1;
 }
-.content .post .post_image {
+.content .post .content_image {
         height: 260px;
         width: 100%;
         background-size: 100%;
 }
-.content .post .post_image {
+.content .post .content_image {
         width: 100%;
         height: 260px;
 }
-.content .post .post_info {
-        height: 100%;
+.content .post .content_info {
+        height: 20%;
         padding: 0px 5px;
         font-weight: 200;
-    font-family: 'Noto Serif', serif;
-}
-.content .post .post_info {
+    font-family: 'Noto Serif', serif;    
         color: #222;
 }
-.content .post .post_info span {
+.content .post .content_info span {
         color: #A6A6A6;
         font-style: italic;
+        
 }
-.content .post .post_info span.read_more {
+
+.content .post .content_info .info span.read_more {
         position: absolute;
         right: 5px; bottom: 5px;
 }
@@ -240,6 +269,8 @@ form input:focus {
         margin:20px 0px;
 }
 .post-sidebar {
+        
+        align-items: center;
         width: 24%;
         float: left;
         margin-left: 5px;
@@ -252,7 +283,7 @@ form input:focus {
         padding: 10px;
 }
 .post-sidebar .card {
-        width: 95%;
+        width: 80%;
         margin: 10px auto;
         border: 1px solid #e4e1e1;
         border-radius: 10px 10px 0px 0px;
